refactor: apply DTORespostas across all service layer methods